Added schema for one API
